# Finance-Tracker

./: .coverage  .gitignore  Dockerfile  INSTALLATION.md  KUBERNETES_GUIDE.md  LOGIN_SYSTEM_IMPLEMENTATION.md  LOGIN_SYSTEM_SUMMARY.md  Makefile  NOTES.md  QUICK_START_LOGIN.md  README.md  README_LOGIN_SYSTEM.md  backup_before_reset.sql  baseline_results.txt  docker-compose.legacy.yml  docker-compose.monitoring.yml  docker-compose.yml  docker-entrypoint.sh  example.env  mysql_backup.sql  neo4j.conf  package-lock.json  pyrightconfig.json  pytest.ini  ruff.toml  test_transactions.csv  transectioner.csv
services/ai-service/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
services/ai-service/app/: auth.py  config.py  main.py
services/ai-service/app/application/: chat_service.py  ingest_service.py  intent_dispatcher.py  pipeline.py  retriever.py  service.py
services/ai-service/app/domain/: exceptions.py  models.py
services/ai-service/app/prompts/: __init__.py  finance_qa.py
services/ai-service/scripts/: sanity_check_retrieval.py
services/ai-service/tests/: conftest.py  test_architecture.py
services/ai-service/tests/eval/: conftest.py  es_seed.py  fixtures.py  golden.py  test_golden_selfcheck.py  test_intent_eval.py  test_retrieval_eval.py
services/ai-service/tests/integration/: test_stream_pipeline.py
services/ai-service/tests/unit/: test_analytics_client.py  test_config.py  test_dispatcher.py  test_es_search.py  test_ingest.py  test_pipeline.py  test_router.py  test_vectorstore.py
services/analytics-service/: Dockerfile  Makefile  README.md  pyproject.toml
services/analytics-service/app/: auth.py  config.py  main.py
services/analytics-service/app/application/: dto.py  embedding_projection.py  embedding_text.py  projections.py  query_service.py  service.py
services/analytics-service/app/domain/: budget_period.py  classification.py  exceptions.py  ranking.py
services/analytics-service/app/shared/: logging.py
services/analytics-service/app/tools/: backfill.py  backfill_embeddings.py  ensure_indices.py
services/analytics-service/app/workers/: embedding_consumer.py  projection_consumer.py
services/analytics-service/tests/integration/: conftest.py  test_backfill.py  test_bootstrap.py  test_hybrid_search.py  test_projection_stores.py  test_query_store.py  test_rest_api.py
services/analytics-service/tests/unit/: test_budget_period.py  test_classification.py  test_embedding_consumer_paths.py  test_embedding_projection.py  test_projection_consumer_paths.py  test_query_service.py  test_ranking.py
services/budget-service/: Dockerfile  Makefile  README.md  alembic.ini  example.env  pyproject.toml  requirements.txt
services/budget-service/app/: auth.py  config.py  database.py  dependencies.py  main.py  models.py
services/budget-service/app/application/: dto.py  monthly_budget_service.py  service.py
services/budget-service/app/domain/: budget_alerts.py  budget_period.py  entities.py  exceptions.py  scheduled_close.py
services/budget-service/app/workers/: budget_alert_scheduler.py  month_close_scheduler.py  outbox_publisher.py
services/budget-service/migrations/: env.py
services/budget-service/migrations/versions/: 001_create_budgets_table.py  002_add_user_id_to_budgets.py  003_add_monthly_budgets_and_outbox.py  004_add_closed_at_to_monthly_budgets.py
services/budget-service/tests/integration/: test_category_port.py  test_monthly_budget_api.py  test_postgres_repository.py  test_rest_api.py
services/budget-service/tests/unit/: test_budget_alert_scheduler.py  test_budget_alerts.py  test_budget_service.py  test_month_close_scheduler.py  test_monthly_budget_service.py  test_scheduled_close.py
services/categorization-service/: Dockerfile  Makefile  alembic.ini  example.env  pyproject.toml
services/categorization-service/app/: auth.py  config.py  database.py  dependencies.py  main.py  models.py  rule_engine_provider.py
services/categorization-service/app/application/: categorization_service.py  category_service.py  dto.py  rule_service.py
services/categorization-service/app/domain/: entities.py  exceptions.py  merchant_normalization.py  taxonomy.py  value_objects.py
services/categorization-service/app/workers/: category_corrected_consumer.py  category_sync_consumer.py  outbox_publisher.py  transaction_consumer.py
services/categorization-service/docs/: RETROSPECTIVE.md  SCHEMA.md
services/categorization-service/migrations/: env.py
services/categorization-service/migrations/versions/: 001_create_tables.py  002_seed_categories.py  003_seed_subcategories.py  004_seed_merchants.py  005_seed_rules.py  006_heal_display_order_and_emit_taxonomy_seed_events.py  007_user_rules_unique_index.py
services/categorization-service/tests/: conftest.py
services/categorization-service/tests/integration/: test_category_corrected_consumer.py  test_category_router_crud.py  test_category_router_readonly.py  test_consumer_idempotency.py  test_rules_router_crud.py
services/categorization-service/tests/migrations/: test_alembic_upgrade.py
services/gateway-service/: Dockerfile  makefile  pyproject.toml  requirements.txt
services/gateway-service/app/: auth.py  config.py  main.py
services/gateway-service/tests/: conftest.py
services/monolith/: .coverage  Dockerfile  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt  test_bank_connection.py  test_full_pipeline.py
services/monolith/backend/: auth.py  config.py  dependencies.py  main.py
services/monolith/docs/: STRUCTURE.md
services/monolith/tests/: conftest.py
services/shared/auth/: MIGRATION.md  README.md  jwt_utils.py  pyproject.toml
services/shared/contracts/: README.md  pyproject.toml
services/shared/domain/: MIGRATION.md  README.md  pyproject.toml
services/shared/messaging/: MIGRATION.md  README.md  pyproject.toml
services/user-service/: Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
services/user-service/app/: auth.py  config.py  dependencies.py  main.py  models.py
services/user-service/migrations/: env.py
(+1288 files in other folders)
