[project]
name = "finans-tracker-ai-service"
version = "0.1.0"
description = "RAG-based Q&A chat service for Finans Tracker"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "ollama>=0.4.0",
    "python-jose[cryptography]>=3.3.0",
    "sse-starlette>=2.0.0",
    "anyio>=4.0.0",
    "finans-tracker-auth",
]

[tool.uv.sources]
finans-tracker-auth = { path = "../shared/auth" }

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-archon",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "eval: retrieval/intent quality eval against a live Ollama (excluded from default test run; see tests/eval/conftest.py)",
]
