[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finans-tracker-analytics-service"
version = "0.1.0"
description = "Elasticsearch-backed denormalized read store (CQRS read-side) for Finans Tracker"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "elasticsearch[async]>=8.11,<9",
    "aio-pika>=9.4.0",
    "PyJWT>=2.8.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "finans-tracker-contracts",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-archon",
    "testcontainers>=4.0",
    "freezegun",
    "respx",
]

[tool.uv.sources]
finans-tracker-contracts = { path = "../shared/contracts" }

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
packages = ["app"]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
