[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finans-tracker-gateway-service"
version = "0.1.0"
description = "Read gateway (GraphQL) for Finans Tracker"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "strawberry-graphql[fastapi]>=0.243.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "finans-tracker-auth",
    "finans-tracker-domain",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "bandit",
    # Tests mint JWTs directly; runtime jose arrives transitively via
    # finans-tracker-auth, but the test-suite dependency is explicit.
    "python-jose[cryptography]>=3.3.0",
]

[tool.uv.sources]
finans-tracker-auth = { path = "../shared/auth" }
finans-tracker-domain = { path = "../shared/domain" }

[tool.hatch.build.targets.wheel]
packages = ["app"]
