[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finans-tracker-auth"
version = "0.1.0"
description = "Shared JWT decoding and FastAPI auth dependency for inter-service authentication"
requires-python = ">=3.11"
dependencies = [
    "python-jose[cryptography]>=3.3.0",
    "fastapi>=0.110.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["auth"]
