[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finans-tracker-domain"
version = "0.1.0"
description = "Shared, transport-agnostic domain logic used by multiple services"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["domain"]
