[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finans-tracker-messaging"
version = "0.1.0"
description = "Shared messaging infrastructure: transactional outbox, RabbitMQ publisher/consumer boilerplate"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "aio-pika>=9.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "aiosqlite",
]

[tool.hatch.build.targets.wheel]
packages = ["messaging"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
